Performance fixes and error handling during loading of images New Map library for handling OSM